--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,14 @@
     "isolatedModules": true,
     "sourceMap": true,
     "inlineSourceMap": true,
-    "inlineSources": true
+    "inlineSources": true,
+    "baseUrl": "src",
+    /**
+    "paths": {
+      "@apps/*": ["apps/*"],
+      "@components/*": ["components/*"]
+    }
+    */
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
   "references": [{ "path": "./tsconfig.node.json" }]
